[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keynergy = { git = "https://github.com/keynergy/keynergy-lib", features = [ "analysis" ]}
clap = { version = "3.1.6", features = [ "derive"] }
confy = "0.4.0"
dialoguer = "0.10.0"
dirs = "4.0.0"
serde = "1.0.136"
git2 = "0.14.2"
